[package]
name = "rusted-nostr-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features=false }
secp256k1 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.24"
