[package]
authors = ["Nitesh Balusu <niteshbalusu@icloud.com>"]
description = "Rust library that provides tools for the Nostr clients."
edition = "2021"
homepage = "https://github.com/niteshbalusu11/rusted-nostr-tools"
keywords = ["nostr", "nostr-tools", "nostr-client", "nostr-rs"]
license = "WTFPL"
name = "rusted-nostr-tools"
readme = "README.md"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features=false }
secp256k1 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.24"
tungstenite = { version = "0.18", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.18", default-features = true, features = ["handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
futures = "0.3"
thiserror = "1.0.40"
url = "2.3.1"
